added env loader

--- a/1.ipynb
+++ b/1.ipynb
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "c8e972d5",
+   "id": "c8f634a9",
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 63,
    "id": "7781f6b2",
    "metadata": {},
    "outputs": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 64,
    "id": "29cbc93a",
    "metadata": {},
    "outputs": [
@@ -256,7 +256,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The user is providing feedback on a system that tracks webinar registrants and attendees in a platform called HS (not specified what HS stands for). The user mentions that the system currently works, but they suggest adding a feature that allows tracking of registrants versus attendees without having to extract the data using CSV (comma-separated values) files. They mention that GoToWebinar has a good system for this and suggest emulating it. They also mention that Zoom, another platform, has a feature where attendees can be filtered based on the percentage of time they spend in a webinar, but there is no way to easily differentiate between registrants who did not attend and actual attendees.\n"
+      "The user is providing feedback on a system that tracks webinar registrants and attendees in a platform called HS (not specified what HS stands for). The user mentions that the system currently works, but there is a need for a more efficient way to track webinar registrants versus attendees without having to extract the data using CSV files. The user suggests that the platform should consider emulating the system used by GoToWebinar, which apparently has a great system for this purpose. \n",
+      "\n",
+      "Additionally, the user mentions that Zoom, another platform, has a feature that allows filtering attendees based on the percentage of time they spend in a webinar (e.g., 30 minutes equals 50% attendance). However, Zoom lacks a simple way to differentiate between registrants who did not attend the webinar and actual attendees.\n"
      ]
     }
    ],
